tests/baselines/reference/unusedTypeParameters4.errors.txt
tests/cases/compiler/unusedTypeParameters4.ts(2,13): error TS6133: 'U' is declared but never used.


==== tests/cases/compiler/unusedTypeParameters4.ts (1 errors) ====
    var x: {
        new <T, U>(a: T): void;
                ~
!!! error TS6133: 'U' is declared but never used.
    }